--- a/S8-netflix mockup/src/App.css
+++ b/S8-netflix mockup/src/App.css
@@ -1,3 +1,12 @@
+.dev-navigation{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  gap: 1rem;
+  padding: 0.2rem;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
